--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             My Life
             </div>
         <div class="content">
-            I live in Philadelphia, PA with my girlfriend and a dog named Milo (<a href="https://michaelbailey.co/pup">pics</a>). I like hockey, code, console gaming, and long <del>wayward stumbling</del> walks on <del>Samson street</del> the beach. Before Philly, I lived with my family in Washington DC until I graduated college in late 2019. My immediate family has since moved to NYC and (after COVID) London. Countries wise I've been to UK, France, Canada, D.R., Bermuda, Germany, Austria and plan on Mexico in 2020. In the US I've travelled for leisure or family to PA (State College and Philly largely), CA (San Francisco), AZ (Scottsdale area), NZ (Vegas), WA (Seattle), FL, GA, NC, SC, MD, VA, DE, NY, NJ, and OH. 
+            I live in Philadelphia, PA with my girlfriend and a dog named Milo (<a href="https://michaelbailey.co/pup">pics</a>). I like hockey, code, console gaming, and long walks on <del>Samson street</del> the beach. Before Philly, I lived with my family in Washington DC until I graduated college in late 2019. My immediate family has since moved to NYC and (after COVID) London. Countries wise I've been to UK, France, Canada, D.R., Bermuda, Germany, Austria and plan on Mexico in 2020. In the US I've travelled for leisure or family to PA (State College and Philly largely), CA (San Francisco), AZ (Scottsdale area), NZ (Vegas), WA (Seattle), FL, GA, NC, SC, MD, VA, DE, NY, NJ, and OH. 
         </div>
         <div class="subtitle">
                 My Work
