--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html><head>
     <style>
         body { 
             text-align: center;
@@ -27,6 +27,7 @@
             border-color: black;
         }
     </style>
+    <title>Michael Bailey's Personal Site</title></head>
     <body>
             <div class="title">
             Michael Bailey
@@ -47,7 +48,7 @@
                 My Work
                 </div>
             <div class="content">
-                I presently work at The Crypsis Group in Professional Services as a DFIR Consultant. Before that (pre-Palo Alto acquisition), I was a security enginneer, then an intern for north of three years. Before <i>that</i>, I worked at Metier Defense Solutions as a Tech Consultant and NanoTech Computers as their sole IT tech (except the owner/operator).
+                I presently work at The Crypsis Group in Professional Services as a DFIR Consultant. Before that (pre-Palo Alto acquisition), I was a security engineer, then an intern for north of three years. Before <i>that</i>, I worked at Metier Defense Solutions as a Tech Consultant and NanoTech Computers as their sole IT tech (except the owner/operator).
                 <br /><br />As security engineer, I worked on their security posture both in a compliance sense and posture sense as they grow rapidly. My specialties at Crypsis that commonly get called on include Linux and AWS. I'm available internally to both be loaned for development purposes and casework, and have absolutely been called on for that.
             </div>
         <div class="subtitle">
