--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             A relatively recent graduate of George Mason University, I'm fundamentally interested about how to get slower things done quickly (automation), how to make things that are working break (security), and how to make things that are broken work (development).
           </p>
           <p>
-            I work at the Crypsis Group as one of their earliest employees (~10 employees at the time, May 2016), and continue to work for them after their <a href="https://www.paloaltonetworks.com/company/press/2020/palo-alto-networks-completes-acquisition-of-the-crypsis-group">Palo Alto Networks acquisition</a>. I had a fairly direct role in a lot of different pots at Crypsis, from leading a incident response R&D project that made millions to working with the Director of IT to get SOC2 Type 1 (company acquired before Type 2 period) for Crypsis. 
+            I work at the Crypsis Group as one of their earliest employees (~10 employees at the time, May 2016), and continue to work for them after their <a href="https://www.paloaltonetworks.com/company/press/2020/palo-alto-networks-completes-acquisition-of-the-crypsis-group">Palo Alto Networks acquisition</a>. I've had a  direct role in a lot of different pots at Crypsis, from leading a incident response R&D project that made millions to working with the Director of IT to get SOC2 Type 1 (company acquired before Type 2 period) for Crypsis. 
           </p>
           <p>
             As a remote worker, generally I like to spend a decent amount of my free time in whatever city I'm in. Previously that's been DC and Philadelphia, but I have immediate family in London and NYC and plan to rent in the Central US throughout Spring 2021.
@@ -346,11 +346,11 @@
               <p class="dark">
                 <b>AccessAnywhere</b><br>
                 <i>Serverless document management system</i>
-                Implemented a system in AWS utilizing Zappa, a serverless framework system. Secured via a 2FA system and user management admin system - including 2FA lockout mechanisms. Worked with a real company as part of our college capstone project. Lead development.
+                Implemented a system in AWS utilizing Zappa, a serverless framework system. Secured via a 2FA system and user management admin system - including 2FA lockout mechanisms. Also included serverless antivirus scanning. If a document was uploaded and failed a scan, it was locked out from the user, requiring a rotatable unlock password to load. Very strong CI/CD. Worked with a real company as part of our college capstone project. Lead development.
               </p>
               <div class="skill-list">
                 <div class="skill-item">Security Best Practices</div>
-                <div class="skill-item">Project Management</div>
+                <div class="skill-item">SDLC Management</div>
                 <div class="skill-item">AWS</div>
                 <div class="skill-item">Serverless</div>
               </div>
