--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
             <a class="page-scroll" href="#about">About</a>
           </li>
           <li>
+            <a class="page-scroll" href="/blog/">Blog</a>
+          </li>
+          <li>
             <a class="page-scroll" href="#education">Education</a>
           </li>
           <li>
@@ -72,10 +75,7 @@
             <a class="page-scroll" href="#portfolio">Key Projects</a>
           </li>
           <li>
-            <a class="page-scroll" href="#awards">Awards</a>
-          </li>
-          <li>
-            <a class="page-scroll" href="#press">Press</a>
+            <a class="page-scroll" href="#press">Publication</a>
           </li>
           <li>
             <a class="page-scroll" href="#contact">Contact</a>
@@ -466,7 +466,7 @@
   <div class="row">
     <div class="col-lg-6 col-lg-offset-3">
       <div class="outer-content-container">
-        <h2 class="section-header inner-content-container" id="press-and-achievements">Press and Authorship</h2>
+        <h2 class="section-header inner-content-container" id="press-and-achievements">Publication< (/h2>
 
         <table id="press-list" class="inner-content-container">
           <tr>
@@ -497,8 +497,14 @@
             <td class="press-date"><p>Crypsis Group (self authored)</p></td>
           </tr>
           <tr>
-            <td><p><b><i>New blog TBD pending release early 2021</i></b></p></td>
-            <td class="press-date"><p>Palo Alto Unit 42</p></td>
+            <td><p><b><a href="https://unit42.paloaltonetworks.com/aws-ebs-direct-apis/">Open Source Tool Release: Gaining Novel AWS Access With EBS Direct APIs
+</a></b></p></td>
+            <td class="press-date"><p>Palo Alto Networks' Unit 42 (self authored)</p></td>
+          </tr>
+          <tr>
+            <td><p><b><a href="https://www.paloaltonetworks.com/blog/security-operations/enrich-aws-cloudtrail-s3-object-lambda/">Using New S3 Features to Give CloudTrail Logs Service-Side Enrichment
+</a></b></p></td>
+            <td class="press-date"><p>Palo Alto Networks SecOps (self authored)</p></td>
           </tr>
         </table>
       </div>
