CDN changes, remove pup

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:site_name" content="Michael Bailey" />
   <meta property="og:url" content="https://michaelbailey.co" />
   <meta property="og:description" content="Amateur cheesesteak wrangler and cybersecurity engineer" />
-  <meta property="og:image" content="img/bitcamp-speaking-og-image-tag.jpg" />
+  <meta property="og:image" content="https://cdn.michaelbailey.co/bitcamp-speaking-og-image-tag.jpg" />
   <link rel="shortcut icon" href="./favicon.ico" />
   <title>Michael Bailey</title>
 
@@ -116,7 +116,7 @@
             I work at the Crypsis Group as one of their earliest employees (~10 employees at the time, May 2016), and continue to work for them after their <a href="https://www.paloaltonetworks.com/company/press/2020/palo-alto-networks-completes-acquisition-of-the-crypsis-group">Palo Alto Networks acquisition</a>. I've had a  direct role in a lot of different pots at Crypsis, from leading a incident response R&D project that made millions to working with the Director of IT to get SOC2 Type 1 (company acquired before Type 2 period) for Crypsis. 
           </p>
           <p>
-            As a remote worker, generally I like to spend a decent amount of my free time in whatever city I'm in. Previously that's been DC and Philadelphia, but I have immediate family in London and NYC and plan to rent in the Central US throughout Spring 2021.
+            As a remote worker, generally I like to spend a decent amount of my free time in whatever city I'm in. Previously that's been DC and Philadelphia, but I have immediate family in London and NYC and rented through the central US throughout Spring 2021.
           </p>
         </div>
       </div>
@@ -135,13 +135,13 @@
         
           <div class="row inner-content-container" style="padding-top: 5%" >
             <div class="col-xs-3 col-md-3">
-              <img src="img/gmu-logo.png" style="width:100%;" />
+              <img src="https://cdn.michaelbailey.co/gmu-logo.png" style="width:100%;" />
             </div>
             <div class="col-xs-9 col-md-9">
               <p class="dark">
                 <b>George Mason University</b><br>
                 BS in Information Technology, InfoSec Concentration<br>
-                Class of 2019<br>
+                Graduated Winter 2019<br>
                 Leadership: <br>
                 <i>Mason Competitive Cyber</i> - <b>Founder and President</b><br>
                 <i>Student Government</i> - <b>Undersecretary of IT</b><br>
@@ -150,13 +150,13 @@
             </div>
             <div class="row inner-content-container" style="padding-top: 30%">
               <div class="col-xs-3 col-md-3">
-                <img src="img/AWSSAA.png" style="width:100%;" />
+                <img src="https://cdn.michaelbailey.co/AWSSAA.png" style="width:100%;" />
               </div>
               <div class="col-xs-9 col-md-9">
                 <p class="dark">
                   <b>AWS Certified Solutions Architect Associate</b><br>
                   Passed December 2020<br>
-                  Expires December 2023<br>
+                  Expired December 2023<br>
                   Credential ID MBSXL3TBKBQQQ9S5<br>
                   Got entirely too many questions on tape backups, still traumatized
                 </p>
@@ -178,12 +178,31 @@
           <div class="inner-content-container">
             <div class="row experience">
               <div class="col-xs-3">
-                <a href="crypsisgroup.com"><img src="img/experience/crypsis.png" class="logo" /></a>
+                <a href="paloaltonetworks.com"><img src="https://cdn.michaelbailey.co/panw.png" class="logo" /></a>
               </div>
               <div class="col-xs-9">
                 <p class="split-para dark pad-right"><b>Crypsis Group</b> (a Palo Alto Networks Company)</p>
                 <p class="split-para pad-right">
-                  <i>DFIR Consultant</i><span>September 2020 - Present</span><br>
+                  <i>DFIR Consultant</i><span>September 2020 - Feb 2021</span><br>
+                  <i>Security Engineer</i><span>January 2020 - September 2020</span><br>
+                  <i>Junior Security Engineer</i><span>March 2018 - January 2020</span><br>
+                  <i>Intern</i><span>May 2016 - March 2018</span><br>
+                </p>
+                <p class="dark pad-right">
+                  A mixture of internal security, development and DevOps, and external client work depending on which role you land on in this list.
+                </p>
+              </div>
+            </div>
+
+          </div>
+            <div class="row experience">
+              <div class="col-xs-3">
+                <a href="crypsisgroup.com"><img src="https://cdn.michaelbailey.co/experience/crypsis.png" class="logo" /></a>
+              </div>
+              <div class="col-xs-9">
+                <p class="split-para dark pad-right"><b>Crypsis Group</b> (a Palo Alto Networks Company)</p>
+                <p class="split-para pad-right">
+                  <i>DFIR Consultant</i><span>September 2020 - Feb 2021</span><br>
                   <i>Security Engineer</i><span>January 2020 - September 2020</span><br>
                   <i>Junior Security Engineer</i><span>March 2018 - January 2020</span><br>
                   <i>Intern</i><span>May 2016 - March 2018</span><br>
@@ -198,7 +217,7 @@
           <div class="inner-content-container">
             <div class="row experience">
               <div class="col-xs-3">
-                <a href="crypsisgroup.com"><img src="img/experience/nanotech_thumb.png" class="logo" /></a>
+                <a href="crypsisgroup.com"><img src="https://cdn.michaelbailey.co/experience/nanotech_thumb.png" class="logo" /></a>
               </div>
               <div class="col-xs-9">
                 <p class="split-para dark pad-right"><b>NanoTech Computers</b></p>
@@ -214,7 +233,7 @@
           <div class="inner-content-container">
             <div class="row experience">
               <div class="col-xs-3">
-                <a href="crypsisgroup.com"><img src="img/experience/metier_ds.png" class="logo" /></a>
+                <a href="crypsisgroup.com"><img src="https://cdn.michaelbailey.co/experience/metier_ds.png" class="logo" /></a>
               </div>
               <div class="col-xs-9">
                 <p class="split-para dark pad-right"><b>Metier Defense Solutions</b></p>
@@ -243,7 +262,7 @@
           <div class="inner-content-container">
             <div class="row experience">
               <div class="col-xs-3">
-                <a href="https://competitivecyber.club/"><img src="img/experience/cc.png" class="logo" /></a>
+                <a href="https://competitivecyber.club/"><img src="https://cdn.michaelbailey.co/experience/cc.png" class="logo" /></a>
               </div>
               <div class="col-xs-9">
                 <p class="split-para dark pad-right"><b>Mason Competitive Cyber</b><br>
@@ -255,7 +274,7 @@
             </div>
             <div class="row experience">
               <div class="col-xs-3">
-                <a href="http://srct.gmu.edu/"><img src="img/experience/srct.png" class="logo" /></a>
+                <a href="http://srct.gmu.edu/"><img src="https://cdn.michaelbailey.co/experience/srct.png" class="logo" /></a>
               </div>
               <div class="col-xs-9">
                 <p class="split-para dark pad-right"><b>Mason Student Run Computing and Technology</b><br>
@@ -269,7 +288,7 @@
             </div>
             <div class="row experience">
               <div class="col-xs-3">
-                <a href="https://sg.gmu.edu/"><img src="img/experience/sg.png" class="logo" /></a>
+                <a href="https://sg.gmu.edu/"><img src="https://cdn.michaelbailey.co/experience/sg.png" class="logo" /></a>
               </div>
               <div class="col-xs-9">
                 <p class="split-para dark pad-right"><b>Mason Student Government</b><br>
@@ -286,7 +305,7 @@
             </div>
             <div class="row experience">
               <div class="col-xs-3">
-                <a href="https://volgenau.gmu.edu"><img src="img/experience/VSE.png" class="logo" /></a>
+                <a href="https://volgenau.gmu.edu"><img src="https://cdn.michaelbailey.co/experience/VSE.png" class="logo" /></a>
               </div>
               <div class="col-xs-9">
                 <p class="split-para dark pad-right"><b>Mason VSE STEM Outreach</b><br>
@@ -310,7 +329,7 @@
 
         <div id="all-projects" class="row inner-content-container">
           <div class="col-md-4 col-sm-4">
-            <a href="https://docs.google.com/file/d/0B9xl3zeYy9g5ZGhVZ1NISDd4b3c/edit?filetype=mspresentation"><img src="img/projects/crypsaurus.png" alt="" class="project-img"></a>
+            <a href="https://docs.google.com/file/d/0B9xl3zeYy9g5ZGhVZ1NISDd4b3c/edit?filetype=mspresentation"><img src="https://cdn.michaelbailey.co/projects/crypsaurus.png" alt="" class="project-img"></a>
             <div class="project-info">
               <p class="dark">
                 <b>Crypsaurus</b><br>
@@ -325,7 +344,7 @@
                 <div class="skill-item">Host Forensics</div>
               </div>
             </div>
-            <a href="#"><img src="img/projects/crypsis-elk.png" alt="" class="project-img"></a>
+            <a href="#"><img src="https://cdn.michaelbailey.co/projects/crypsis-elk.png" alt="" class="project-img"></a>
             <div class="project-info">
               <p class="dark">
                 <b>Crypsis ELK-SIFT Auto-Scaling Fleet</b><br>
@@ -341,7 +360,7 @@
             </div>
           </div>
           <div class="col-md-4 col-sm-4">
-            <a href="#"><img src="img/projects/accessanywhere.png" alt="" class="project-img"></a>
+            <a href="#"><img src="https://cdn.michaelbailey.co/projects/accessanywhere.png" alt="" class="project-img"></a>
             <div class="project-info">
               <p class="dark">
                 <b>AccessAnywhere</b><br>
@@ -355,7 +374,7 @@
                 <div class="skill-item">Serverless</div>
               </div>
             </div>
-            <a href="#"><img src="img/projects/ctf.png" alt="" class="project-img"></a>
+            <a href="#"><img src="https://cdn.michaelbailey.co/projects/ctf.png" alt="" class="project-img"></a>
                 <div class="project-info">
                   <p class="dark">
                     <b>patriotCTF 2018 Head Organizer</b><br>
@@ -371,7 +390,7 @@
                 </div>
           </div>
           <div class="col-md-4 col-sm-4">
-            <a href="#"><img src="img/projects/grr_fleet.png" alt="" class="project-img"></a>
+            <a href="#"><img src="https://cdn.michaelbailey.co/projects/grr_fleet.png" alt="" class="project-img"></a>
             <div class="project-info">
               <p class="dark">
                 <b>GRR Fleet Management System</b><br>
@@ -387,7 +406,7 @@
             </div>
           </div>
             <div class="col-md-4 col-sm-4">
-              <a href="#"><img src="img/projects/oauth_abuse.png" alt="" class="project-img"></a>
+              <a href="#"><img src="https://cdn.michaelbailey.co/projects/oauth_abuse.png" alt="" class="project-img"></a>
               <div class="project-info">
                 <p class="dark">
                   <b>Forensics Extraction via OAuth Flaw</b><br>
