--- a/index.html
+++ b/index.html
@@ -181,15 +181,14 @@
                 <a href="paloaltonetworks.com"><img src="https://cdn.michaelbailey.co/panw.png" class="logo" /></a>
               </div>
               <div class="col-xs-9">
-                <p class="split-para dark pad-right"><b>Crypsis Group</b> (a Palo Alto Networks Company)</p>
+                <p class="split-para dark pad-right"><b>Palo Alto Networks</p>
                 <p class="split-para pad-right">
-                  <i>DFIR Consultant</i><span>September 2020 - Feb 2021</span><br>
-                  <i>Security Engineer</i><span>January 2020 - September 2020</span><br>
-                  <i>Junior Security Engineer</i><span>March 2018 - January 2020</span><br>
-                  <i>Intern</i><span>May 2016 - March 2018</span><br>
+                  <i>Junior Security Engineer</i><span>December 2021 - Present</span><br>
+                  <i>DevOps Engineer</i><span>February 2021 - December 2021</span><br>
+                  <i>DFIR Consultant (in Merger)</i><span>September 2020 - Feb 2021</span><br>
                 </p>
                 <p class="dark pad-right">
-                  A mixture of internal security, development and DevOps, and external client work depending on which role you land on in this list.
+                  Taking a advantage of all that Palo has to offer as a best-in-class product enterprise to engineer the solutions I really always have.
                 </p>
               </div>
             </div>
