--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               <div class="col-xs-9">
                 <p class="split-para dark pad-right"><b>Palo Alto Networks</p>
                 <p class="split-para pad-right">
-                  <i>Junior Security Engineer</i><span>December 2021 - Present</span><br>
+                  <i>Security Automation Engineer</i><span>December 2021 - Present</span><br>
                   <i>DevOps Engineer</i><span>February 2021 - December 2021</span><br>
                   <i>DFIR Consultant (in Merger)</i><span>September 2020 - Feb 2021</span><br>
                 </p>
