--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
   <div class="row">
     <div class="col-lg-6 col-lg-offset-3">
       <div class="outer-content-container">
-        <h2 class="section-header inner-content-container" id="press-and-achievements">Publication< (/h2>
+        <h2 class="section-header inner-content-container" id="press-and-achievements">Publication</h2>
 
         <table id="press-list" class="inner-content-container">
           <tr>
