tweak company-name stylings

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <a href="paloaltonetworks.com"><img src="https://cdn.michaelbailey.co/panw.png" class="logo" /></a>
               </div>
               <div class="col-xs-9">
-                <p class="split-para dark pad-right"><b>Palo Alto Networks</p>
+                <p class="split-para dark pad-right company-name"><b>Palo Alto Networks</p>
                 <p class="split-para pad-right">
                   <i>Security Automation Engineer</i><span>December 2021 - Present</span><br>
                   <i>DevOps Engineer</i><span>February 2021 - December 2021</span><br>
@@ -199,7 +199,7 @@
                 <a href="crypsisgroup.com"><img src="https://cdn.michaelbailey.co/experience/crypsis.png" class="logo" /></a>
               </div>
               <div class="col-xs-9">
-                <p class="split-para dark pad-right"><b>Crypsis Group</b> (a Palo Alto Networks Company)</p>
+                <p class="split-para dark pad-right company-name"><b>Crypsis Group</b> (a Palo Alto Networks Company)</p>
                 <p class="split-para pad-right">
                   <i>DFIR Consultant</i><span>September 2020 - Feb 2021</span><br>
                   <i>Security Engineer</i><span>January 2020 - September 2020</span><br>
@@ -219,7 +219,7 @@
                 <a href="crypsisgroup.com"><img src="https://cdn.michaelbailey.co/experience/nanotech_thumb.png" class="logo" /></a>
               </div>
               <div class="col-xs-9">
-                <p class="split-para dark pad-right"><b>NanoTech Computers</b></p>
+                <p class="split-para dark pad-right company-name"><b>NanoTech Computers</b></p>
                 <p class="split-para pad-right">
                   <i>IT Consultant</i><span>May 2015 - March 2018</span><br>
                 </p>
@@ -235,7 +235,7 @@
                 <a href="crypsisgroup.com"><img src="https://cdn.michaelbailey.co/experience/metier_ds.png" class="logo" /></a>
               </div>
               <div class="col-xs-9">
-                <p class="split-para dark pad-right"><b>Metier Defense Solutions</b></p>
+                <p class="split-para dark pad-right company-name"><b>Metier Defense Solutions</b></p>
                 <p class="split-para pad-right">
                   <i>Technical Consultant</i><span>May 2014 - August 2014</span><br>
                 </p>
