tweak org descriptors

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 <p class="split-para dark pad-right"><b>Mason Competitive Cyber</b><br>
                   <i>President and Founder</i><span>August 2016 - December 2019</span><br>
                 <p class="dark pad-right">
-                  Founded an organization from scratch that by the time I left had hundreds of Slack members, hosted  both Linux and Cryptography advocacy workshops, several corporate guest circuits, weekly meetings,  multiple sponsors, enough paperwork for a small enterprise, and  and ran a relatively popular on-site CTF event. We were characterized even from GMU as very "self sustaining" and brought our own presentations week-after-week. While I frequently spoke when nobody else would, by the time I left I was largely just giving weekly announcements and handing it over to students trying to hone their speaking/presentation skills.<br>
+                  Founded an organization from scratch that had hundreds of members, hosted both Linux and Cryptography advocacy workshops, several corporate guest circuits, weekly meetings, multiple corporate sponsors, enough paperwork to be more complicated than the average SMB, and ran a relatively popular on-site CTF event by graduation. We were characterized even by GMU itself in presentations as very "self sustaining" and conducted our own training under a peer model. While I frequently led training initially, by the time I left my day-of involvement was largely giving weekly announcements and handing it over to students trying to hone their speaking/presentation skills.<br>
                 </p>
               </div>
             </div>
@@ -280,9 +280,10 @@
                   <i>Systems Administrator, Executive Officer</i><span>May 2018 - May 2019</span><br>
                 <p class="dark pad-right">
                   As an elected position, I had two primary roles as Systems Administrator.<br>
-                  As systems administrator, I supported applications such as URL shorteners, a "What's Open at this hour" application, and more. Monitored and responded to abuse complaints, which was critical having a strong .edu presence under my own school. Some of our apps were so well supported that GMU embedded them into their official apps. As the systems admin, I even signed an MOU alongside the president with Mason Dining around SLAs, etc for our most popular application "What's Open." I also introduced a bug bounty program. I personally found and patched a critical CSRF vulnerability in a relatively popular application.<br>
-                  As an executive officer, I had a vote in org matters. I was a significant part of executive  conversations in the organization around events, networking (such as under the Mozilla Open Source Student network), how to handle member disputes, and even having to call a motion of no confidence on the president (unanimously passed) after members and leadership repeatedly complained in camera.
-                </p>
+                <ul>
+                <li>As systems administrator, I supported applications such as URL shorteners, a "What's Open at this hour" application, and more. Monitored and responded to abuse complaints, which was critical having a strong .edu presence under my own school. Some of our apps were so well supported that GMU embedded them into their official apps. As the systems admin, I even signed an MOU alongside the president with Mason Dining around SLAs, etc for our most popular application "What's Open." I also introduced a bug bounty program. I personally found and patched a critical CSRF vulnerability in a relatively popular application.</li><li>As an executive officer, I had a vote in org matters. I was a significant part of executive  conversations in the organization around events, networking (such as under the Mozilla Open Source Student network), how to handle member disputes, and even having to call a motion of no confidence on the president (unanimously passed) after members and leadership repeatedly complained in camera.</li>
+              </ul>
+              </p>
               </div>
             </div>
             <div class="row experience">
