--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <a href="paloaltonetworks.com"><img src="https://cdn.michaelbailey.co/panw.png" class="logo" /></a>
               </div>
               <div class="col-xs-9">
-                <p class="split-para dark pad-right company-name"><b>Palo Alto Networks</p>
+                <p class="split-para dark pad-right company-name">Palo Alto Networks</p>
                 <p class="split-para pad-right">
                   <i>Security Automation Engineer</i><span>December 2021 - Present</span><br>
                   <i>DevOps Engineer</i><span>February 2021 - December 2021</span><br>
@@ -280,7 +280,7 @@
                   <i>Systems Administrator, Executive Officer</i><span>May 2018 - May 2019</span><br>
                 <p class="dark pad-right">
                   As an elected position, I had two primary roles as Systems Administrator.<br>
-                <ul>
+                <ul class="dark pad-right">
                 <li>As systems administrator, I supported applications such as URL shorteners, a "What's Open at this hour" application, and more. Monitored and responded to abuse complaints, which was critical having a strong .edu presence under my own school. Some of our apps were so well supported that GMU embedded them into their official apps. As the systems admin, I even signed an MOU alongside the president with Mason Dining around SLAs, etc for our most popular application "What's Open." I also introduced a bug bounty program. I personally found and patched a critical CSRF vulnerability in a relatively popular application.</li><li>As an executive officer, I had a vote in org matters. I was a significant part of executive  conversations in the organization around events, networking (such as under the Mozilla Open Source Student network), how to handle member disputes, and even having to call a motion of no confidence on the president (unanimously passed) after members and leadership repeatedly complained in camera.</li>
               </ul>
               </p>
@@ -298,7 +298,7 @@
                   <i>[...] The Undersecretary <b><u>shall be
                     responsible for serving as a liaison between the students and the university technical community,
                     working with various other entities to disseminate information to the student body, and serving
-                    as a technical resource to other areas of Student Government as needed.</b></u> </i><br><br>
+                    as a technical resource to other areas of Student Government as needed.</b></u></i><br><br>
                     As Undersecretary of IT, I advocated for 2FA adoption in the university, worked on the official .edu SG website, and tried to address WiFi issues by aggregating data about the problem amongst students. I also attempted to serve as a liaison between STEM majors and the Student Government, which I feel was very productive - after making introductions, a SRCT member took a higher secretary position before I had even left. STEM majors were under-represented in Student Government and I advocated for more outreach.
                 </p>
               </div>
