--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         
           <div class="row inner-content-container" style="padding-top: 5%" >
             <div class="col-xs-3 col-md-3">
-              <img src="https://cdn.michaelbailey.co/gmu-logo.png" style="width:100%;" />
+              <img src="https://cdn.michaelbailey.co/gmu-logo.png" alt="GMU logo" style="width:100%;" />
             </div>
             <div class="col-xs-9 col-md-9">
               <p class="dark">
@@ -178,7 +178,7 @@
           <div class="inner-content-container">
             <div class="row experience">
               <div class="col-xs-3">
-                <a href="paloaltonetworks.com"><img src="https://cdn.michaelbailey.co/panw.png" class="logo" /></a>
+                <a href="https://paloaltonetworks.com"><img src="https://cdn.michaelbailey.co/panw.png" class="logo" /></a>
               </div>
               <div class="col-xs-9">
                 <p class="split-para dark pad-right company-name">Palo Alto Networks</p>
@@ -196,7 +196,7 @@
           </div>
             <div class="row experience">
               <div class="col-xs-3">
-                <a href="crypsisgroup.com"><img src="https://cdn.michaelbailey.co/experience/crypsis.png" class="logo" /></a>
+                <a href="https://crypsisgroup.com"><img alt="Crypsis Group logo" src="https://cdn.michaelbailey.co/experience/crypsis.png" class="logo" /></a>
               </div>
               <div class="col-xs-9">
                 <p class="split-para dark pad-right company-name"><b>Crypsis Group</b> (a Palo Alto Networks Company)</p>
@@ -216,7 +216,7 @@
           <div class="inner-content-container">
             <div class="row experience">
               <div class="col-xs-3">
-                <a href="crypsisgroup.com"><img src="https://cdn.michaelbailey.co/experience/nanotech_thumb.png" class="logo" /></a>
+                <a href="https://nanotechcomputers.net/"><img src="https://cdn.michaelbailey.co/experience/nanotech_thumb.png" class="logo" /></a>
               </div>
               <div class="col-xs-9">
                 <p class="split-para dark pad-right company-name"><b>NanoTech Computers</b></p>
@@ -232,7 +232,7 @@
           <div class="inner-content-container">
             <div class="row experience">
               <div class="col-xs-3">
-                <a href="crypsisgroup.com"><img src="https://cdn.michaelbailey.co/experience/metier_ds.png" class="logo" /></a>
+                <a href="https://web.archive.org/web/20141002024844/http://www.metierdefense.com/"><img src="https://cdn.michaelbailey.co/experience/metier_ds.png" class="logo" /></a>
               </div>
               <div class="col-xs-9">
                 <p class="split-para dark pad-right company-name"><b>Metier Defense Solutions</b></p>
