--- a/index.html
+++ b/index.html
@@ -72,13 +72,16 @@
             <a class="page-scroll" href="#work-experience">Experience</a>
           </li>
           <li>
-            <a class="page-scroll" href="#portfolio">Key Projects</a>
+            <a class="page-scroll" href="#portfolio">Projects</a>
           </li>
           <li>
             <a class="page-scroll" href="#press">Publication</a>
           </li>
           <li>
             <a class="page-scroll" href="#contact">Contact</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="https://cdn.michaelbailey.co/resume.pdf">Resume</a>
           </li>
         </ul>
       </div>
@@ -177,13 +180,14 @@
 
           <div class="inner-content-container">
             <div class="row experience">
+
               <div class="col-xs-3">
                 <a href="https://paloaltonetworks.com"><img src="https://cdn.michaelbailey.co/panw.png" class="logo" /></a>
               </div>
               <div class="col-xs-9">
                 <p class="split-para dark pad-right company-name">Palo Alto Networks</p>
                 <p class="split-para pad-right">
-                  <i>Security Automation Engineer</i><span>December 2021 - Present</span><br>
+                  <i>Senior Security Automation Engineer</i><span>December 2021 - Present</span><br>
                   <i>DevOps Engineer</i><span>February 2021 - December 2021</span><br>
                   <i>DFIR Consultant (in Merger)</i><span>September 2020 - Feb 2021</span><br>
                 </p>
@@ -538,8 +542,7 @@
       <div class="col-lg-8 col-lg-offset-2">
         <span style="text-align: center; font-weight: bold;"><i>Contact Me!</i></span><br /><br/>
         <a href="http://linkedin.com/in/cybermichael/"><i class="fa fa-linkedin"></i></a>
-        <a href="http://github.com/mike-bailey/"><i class="fa fa-github"></i></a>
-        <a href="mailto:mbaile18@gmu.edu"><i class="fa fa-envelope"></i></a>
+        <a href="mailto:bailey@michaelbailey.co"><i class="fa fa-envelope"></i></a>
       </div>
     </div>
     <br>
